wk_taa_taaqa/src/objects/BI_Retention_Quota__c.object
<CustomObject>
    <fields>
        <fullName>BI_Amount__c</fullName>
        <label>BI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>N2E_Quota__c</fullName>
        <label>N2E Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retention_DTN__c</fullName>
        <label>Retention DTN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Month__c</fullName>
        <label>Retention Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retention_Quota__c</fullName>
        <label>Retention Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retention_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retention Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BI_Retention_Quota_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BI Retention Quota</label>
    <listViews>
        <fullName>Opps</fullName>
        <columns>NAME</columns>
        <columns>Retention_Rep__c</columns>
        <columns>Retention_DTN__c</columns>
        <columns>Retention_Month__c</columns>
        <columns>BI_Amount__c</columns>
        <columns>N2E_Quota__c</columns>
        <columns>Retention_Quota__c</columns>
        <filterScope>Everything</filterScope>
        <label>Opps</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BIRQ-{000000}</displayFormat>
        <label>BI Retention Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BI Retention Quota&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>